[Gepardec/mega#674] minor changes due to feedback